# VulkanSpectreEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  ImageBuffer.cpp
src/Buffers/: DataBuffer.cpp  DataBuffer.h  ImageBuffer.cpp  ImageBuffer.h  TextureBuffer.cpp  TextureBuffer.h
src/Camera/: Camera.cpp  Camera.h
src/Core/: App.cpp  App.h  main.cpp
src/Input/: InputActions.cpp  InputActions.h  InputHandler.cpp  InputHandler.h
src/Light/: LightSystem.cpp  LightSystem.h
src/Misc/: Singleton.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h
src/Scene/: GameData.h  GameObject.h  Mesh.cpp  Mesh.h  MeshData.cpp  MeshData.h
src/Shaders/: 2DShader.vert  3DShader.vert
src/VR/: Controllers.cpp  Controllers.h  Headset.cpp  Headset.h
src/VulkanBase/: RenderTarget.cpp  RenderTarget.h  VulkanDevice.cpp  VulkanDevice.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderSystem.cpp  VulkanRenderSystem.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanWindow.cpp  VulkanWindow.h
src/shaders/: Diffuse.frag  Diffuse.vert  Diffuse2D.frag  Diffuse2D.vert  DiffuseTransparent.frag  DiffuseTransparent.vert  Grid.frag  Grid.vert  Illumination.frag
